force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__Date_Rate_Set__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Date_Rate_Set__c</fullName>
    <description>This date field indicates the date used to determine the average prime offer rate for a comparable transaction. By default, this field is blank.</description>
    <label>Date Interest Rate Set</label>
    <type>Date</type>
</CustomField>