force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Action_Taken__c</fullName>
    <description>The system automatically populates this optional picklist field to describe the type of action taken for the application. By default, it is empty.</description>
    <inlineHelpText>Use this field to describe the type of action taken for the application.</inlineHelpText>
    <label>Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Originated</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Approved but not accepted</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Denied</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Withdrawn by the applicant</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Incomplete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>