force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Action_Taken_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Action_Taken_Date__c</fullName>
    <description>The system automatically populates this optional text field to indicate the date for when the Action Taken occurred. By default, it is empty.</description>
    <inlineHelpText>Use this field to indicate the date for when the Action Taken occurred.</inlineHelpText>
    <label>Action Taken Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>