force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Amount_Applied_For__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Amount_Applied_For__c</fullName>
    <description>The system automatically populates this optional text field to specify the initial loan amount or credit limit the applicant applied for. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the initial loan amount or credit limit the applicant applied for.</inlineHelpText>
    <label>Amount Applied For</label>
    <length>50</length>
    <type>Text</type>
</CustomField>