force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Amount_Applied_For_Flag__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Amount_Applied_For_Flag__c</fullName>
    <description>The system automatically populates this optional picklist field to indicate if the applicant provided the initial loan amount or credit limit. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate if the applicant provided the initial loan amount or credit limit.</inlineHelpText>
    <label>Amount Applied For Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>900</fullName>
                <label>900 - Applicable and reported</label>
            </value>
            <value>
                <fullName>988</fullName>
                <label>988 - Applicable but not provided by applicant and otherwise undetermined</label>
            </value>
            <value>
                <fullName>999</fullName>
                <label>999 - Not applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>