force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Amount_Approved__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Amount_Approved__c</fullName>
    <description>The system automatically populates this optional text field to specify the loan amount or credit limit whether approved or originated. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the loan amount or credit limit whether approved or originated.</inlineHelpText>
    <label>Amount Approved</label>
    <length>50</length>
    <type>Text</type>
</CustomField>