force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_App_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_App_Date__c</fullName>
    <description>Users populate this optional text field to specify the application date. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the application date.</inlineHelpText>
    <label>Application Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>