force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_App_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_App_Method__c</fullName>
    <description>Users populate this optional picklist field to describe how the applicant submits the application. By default, it is empty.</description>
    <inlineHelpText>Select a value to describe which method the applicant uses to submit the application.</inlineHelpText>
    <label>Application Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - In-person</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Telephone</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Online</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Mail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>