force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_App_Recipient__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_App_Recipient__c</fullName>
    <description>Users populate this optional picklist field to indicate the application recipient. By default, it is empty.</description>
    <inlineHelpText>Enter one of the specified codes to indicate the application recipient.</inlineHelpText>
    <label>Application Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1 - Directly submitted</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Indirectly submitted via a third party</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>