force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Census_Tract_Adr_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Census_Tract_Adr_Type__c</fullName>
    <description>The system automatically populates this optional picklist field to indicate the address type used to determine the census tract. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate the address type used to determine the census tract.</inlineHelpText>
    <label>Census Tract Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Address or location where the loan proceeds will principally be applied</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Address or location of borrower&apos;s main office or headquarters</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Another address or location associated with the applicant</label>
            </value>
            <value>
                <fullName>988</fullName>
                <label>988 - Not provided by applicant and otherwise undetermined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>