force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Census_Tract_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Census_Tract_Number__c</fullName>
    <description>The system automatically populates this optional text field to store the census tract number. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the census tract number.</inlineHelpText>
    <label>Census Tract Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>