force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Credit_Purpose__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Credit_Purpose__c</fullName>
    <description>The system automatically populates this optional multi-select picklist field to indicate the purpose of the credit applied for or originated. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate the purpose of the credit applied for or originated.</inlineHelpText>
    <label>Credit Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Purchase, construction/improvement, or refinance of non-owner-occupied real property</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Purchase, construction/improvement, or refinance of owner-occupied real property</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Purchase, refinance, or rehabilitation/repair of motor vehicle(s) (including light and heavy trucks)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Purchase, refinance, or rehabilitation/repair of equipment</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Working capital (including inventory or floor planning)</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - Business start-up</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 - Business expansion</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 - Business acquisition</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9 - Refinance existing debt (other than refinancings listed above)</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 - Line increase</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 - Overdraft</label>
            </value>
            <value>
                <fullName>977</fullName>
                <label>977 - Other</label>
            </value>
            <value>
                <fullName>988</fullName>
                <label>988 - Not provided by applicant and otherwise undetermined</label>
            </value>
            <value>
                <fullName>999</fullName>
                <label>999 - Not applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>