force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Credit_Purpose_FF__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Credit_Purpose_FF__c</fullName>
    <description>Users populate this optional text field to specify the purpose of the credit applied for or originated. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the purpose of the credit applied for or originated.</inlineHelpText>
    <label>Credit Purpose Free Form</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>