force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_CT_Credit_Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_CT_Credit_Product__c</fullName>
    <description>The system automatically populates this optional picklist field to indicate the credit product of the loan. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate the credit product of the loan.</inlineHelpText>
    <label>Credit Type - Credit Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Term loan - unsecured</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Term loan - secured</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Line of credit - unsecured</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Line of credit - secured</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Credit card account, not private-label</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - Private-label credit card account</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 - Merchant cash advance</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 - Other sales-based financing transaction</label>
            </value>
            <value>
                <fullName>977</fullName>
                <label>977 - Other</label>
            </value>
            <value>
                <fullName>988</fullName>
                <label>988 - Not provided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>