force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_CT_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_CT_Guarantee__c</fullName>
    <description>The system automatically populates this optional multi-select picklist field to indicate the type(s) of guarantee. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate the type(s) of guarantee.</inlineHelpText>
    <label>Credit Type - Guarantee Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Personal guarantee - owner(s)</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Personal guarantee - non-owner(s)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - SBA guarantee - 7(a) program</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - SBA guarantee - 504 program</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - SBA guarantee - other</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - USDA guarantee</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 - FHA insurance</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 - Bureau of Indian Affairs guarantee</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9 - Other Federal guarantee</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 - State government guarantee</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 - Local government guarantee</label>
            </value>
            <value>
                <fullName>977</fullName>
                <label>977 - Other</label>
            </value>
            <value>
                <fullName>999</fullName>
                <label>999 - No guarantee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>