force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_CT_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_CT_Loan_Term__c</fullName>
    <description>The system automatically populates this optional text field to specify the number of months in the loan term for products that have a loan term. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the number of months in the loan term for products that have a loan term.</inlineHelpText>
    <label>Credit Type - Loan Term</label>
    <length>5</length>
    <type>Text</type>
</CustomField>