force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Denial_Reason_FF__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Denial_Reason_FF__c</fullName>
    <description>The system automatically populates this optional text field to specify the denial reason(s). By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the denial reason(s).</inlineHelpText>
    <label>Denial Reason Free Form</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>