force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Pricing_Fixed_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Pricing_Fixed_Rate__c</fullName>
    <description>The system automatically populates this optional text field with a percentage to specify the fixed interest rate. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the fixed interest rate.</inlineHelpText>
    <label>Fixed Rate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>