force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Pricing_Init_Rate_Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Pricing_Init_Rate_Period__c</fullName>
    <description>The system automatically populates this optional text field to specify the number of months the initial rate is active. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the number of months the initial rate is active.</inlineHelpText>
    <label>Initial Rate Period</label>
    <length>10</length>
    <type>Text</type>
</CustomField>