force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Pricing_Initial_Charges__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Pricing_Initial_Charges__c</fullName>
    <description>The system automatically populates this optional text field to specify the dollar amount of total non-interest charges imposed over the first annual period. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the dollar amount of total non-interest charges imposed over the first annual period.</inlineHelpText>
    <label>Initial Charges</label>
    <length>12</length>
    <type>Text</type>
</CustomField>