force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Pricing_Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Pricing_Interest_Rate_Type__c</fullName>
    <description>The system automatically populates this optional picklist field to indicate the loan’s interest rate type. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate the loan’s interest rate type.</inlineHelpText>
    <label>Interest Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Variable interest rate, no initial rate period</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Fixed interest rate, no initial rate period</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Variable interest rate, initial rate period &gt; 12 months</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Fixed interest rate, initial rate period &gt; 12 months</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Variable interest rate, initial rate period &lt;= 12 months</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - Fixed interest rate, initial rate period &lt;= 12 months</label>
            </value>
            <value>
                <fullName>999</fullName>
                <label>999 - Not applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>