force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Pricing_MCA_Addcost__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Pricing_MCA_Addcost__c</fullName>
    <description>The system automatically populates this optional text field to specify the dollar difference between the advanced amount and the repayment amount. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the dollar difference between the advanced amount and the repayment amount.</inlineHelpText>
    <label>MCA Addcost</label>
    <length>12</length>
    <type>Text</type>
</CustomField>