force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Pricing_MCA_Addcost_Flag__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Pricing_MCA_Addcost_Flag__c</fullName>
    <description>The system automatically populates this optional picklist field to indicate whether the Merchant Cash Advance (MCA) or other sales-based financing transaction cost is applicable. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate whether the Merchant Cash Advance (MCA) or other sales-based financing transaction cost is applicable.</inlineHelpText>
    <label>MCA Addcost Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>900</fullName>
                <label>900 - Applicable</label>
            </value>
            <value>
                <fullName>999</fullName>
                <label>999 - Not applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>