force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Pricing_Origination_Charges__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Pricing_Origination_Charges__c</fullName>
    <description>The system automatically populates this optional text field to specify the dollar amount of total origination charges. By default, it is empty.</description>
    <inlineHelpText>Use this field to specify the dollar amount of total origination charges.</inlineHelpText>
    <label>Origination Charges</label>
    <length>12</length>
    <type>Text</type>
</CustomField>