force-app/main/default/objects/LLC_BI__Loan_Compliance__c/fields/LLC_BI__DF1071_Pricing_Prepenalty_Exists__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DF1071_Pricing_Prepenalty_Exists__c</fullName>
    <description>The system automatically populates this optional picklist field to indicate whether the transaction terms include a prepayment penalty. By default, it is empty.</description>
    <inlineHelpText>Select a value to indicate whether the transaction terms include a prepayment penalty.</inlineHelpText>
    <label>Prepenalty Exists</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Yes</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - No</label>
            </value>
            <value>
                <fullName>999</fullName>
                <label>999 - Not applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>